--- a/css/styles.css
+++ b/css/styles.css
@@ -467,6 +467,9 @@ img{
     height: 581px;
     top: 50%;
     left: 50%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     
     background-color: var(--background-color-4);
     /* top: calc(50% - 290.5px);
@@ -478,7 +481,18 @@ img{
     
     border-radius: 4px;
 }
+.modal-window h2{
+    width: 448px;
+    text-align: center;
 
+    font-style: normal;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 23px;
+    text-align: center;
+    letter-spacing: 0.03em;
+
+}
 .modal-button{
     position: absolute;
     right: 8px;
@@ -509,6 +523,12 @@ img{
 .modal-button svg{
     width: 11px;
     height: 11px;
+}
+
+.modal-form{
+    width: 448px;
+    display: flex;
+    flex-direction: column;
 }
     /*------------ features ----------*/
 .main-features-header{
