--- a/css/styles.css
+++ b/css/styles.css
@@ -470,8 +470,10 @@ img{
     left: 50%;
     display: flex;
     flex-direction: column;
-    align-items: center;
-    
+    gap: 10px;
+    padding-left: 41px;
+    padding-right: 39px;
+
     background-color: var(--background-color-4);
     /* top: calc(50% - 290.5px);
     left: calc(50% - 264px); */
@@ -535,16 +537,18 @@ img{
     display: flex;
     flex-direction: column;
 
-
 }
 
-.modal-form input{
-    height: 44px;
-}
-.modal-form input:not(:last-of-type){
-    padding-left: 42px;
+.modal-form-container{
     margin-bottom: 10px;
 }
+
+.modal-form input:not([type="checkbox"]){
+    height: 44px;
+    width: 100%;
+    padding-left: 42px;
+}
+
 .modal-form label{
     margin-bottom: 4px;
 }
@@ -552,6 +556,12 @@ img{
 .modal-form textarea{
     padding: 12px 16px;
     height: 120px;
+    
+    resize: none;
+}
+
+.modal-form input[type="checkbox"]{
+
 }
 
 .modal-form button{
