--- a/css/styles.css
+++ b/css/styles.css
@@ -541,6 +541,15 @@ img{
 
 .modal-form-container{
     margin-bottom: 10px;
+    position: relative;
+}
+
+.modal-form-container svg{
+    width: 18px;
+    height: 18px;
+    position: absolute;
+    left: 12px;
+    top: 12px;
 }
 
 .modal-form input:not([type="checkbox"]){
