--- a/css/styles.css
+++ b/css/styles.css
@@ -549,7 +549,8 @@ img{
     height: 18px;
     position: absolute;
     left: 12px;
-    top: 12px;
+    top: 50%;
+    transform: translateY(-50%);
 }
 
 .modal-form input:not([type="checkbox"]){
