--- a/css/styles.css
+++ b/css/styles.css
@@ -275,6 +275,7 @@ img{
     height: 12px;
     fill: currentColor;
 }
+
 /* svg smartphone */
 .header-contacts-smartphone{
     margin-right: 10px;
@@ -570,8 +571,16 @@ img{
     resize: none;
 }
 
-.modal-form input[type="checkbox"]{
+.form-checkbox{
+    position: relative;
+}
 
+.form-checkbox .custom-checkbox{
+    width: 20px;
+    height: 20px;
+    outline: red 2px solid;
+    position: absolute;
+    left: 0;
 }
 
 .modal-form button{
