--- a/css/styles.css
+++ b/css/styles.css
@@ -378,6 +378,7 @@ img{
 }
 
 #footer-subscribe-email{
+    padding-left: 16px;
     background: transparent;
     color: var(--secondary-text-color);
     width: 358px;
